--- a/styles/header.css
+++ b/styles/header.css
@@ -7,4 +7,11 @@
 }
 .cabeçalho {
     background-color: var(--branco);
+    display:  flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.container {
+    display:  flex;
+    align-items: center;
 }
