--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,8 @@
    width: 24px;
    height: 24px;
    background-image: url("../img/.svg") ;
+   background-repeat: no-repeat;
+   background-position: center;
    display: inline-block;
 }
 .cabeçalho {
@@ -14,4 +16,7 @@
 .container {
     display:  flex;
     align-items: center;
+}
+.container__imagem {
+    padding: 1em;
 }
