--- a/styles/header.css
+++ b/styles/header.css
@@ -32,6 +32,7 @@
 }
 .lista-menu__titulo {
     color: var(--laranja);
+    font-weight: 400;
 }
 .lista-menu__item {
     padding: 1em;
@@ -43,4 +44,7 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-transform: uppercase;
+}
+.conteiner__botao {
+    display: none;
 }
