--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -11,3 +11,12 @@
     font-weight: 700;
     padding: 1em 0 0.5em 0;
 }
+
+.swiper-slide img {
+    width: 100%;
+}
+
+.swiper-buton-prev,
+.swiper-button-next {
+    display: none;
+}
