--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -20,3 +20,14 @@
 .swiper-button-next {
     display: none;
 }
+
+.swiper-pagination {
+    position: initial;
+    margin: 0.5em 0;
+}
+
+.card__descricao {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+}
