--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url("styles/banner.css");
 @import url("styles/carrossel.css");
 @import url("styles/contato.css");
+@import url("styles/rodape.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
